feat(payslip-be) : fixing and finalizing all feature including testing and documentation
